--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ payload_holders/*
 !payload_holders/this_folder_should_contain_word_files
 .jython_cache/
 templates/loader.hta
+venv/*
+__pycache__/*
+creds.txt
