added eas encrypted shellcode document. Need the loader to weaponise

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ payloads/*
 !payloads/payloads_will_be_cached_here
 payload_holders/*
 !payload_holders/this_folder_should_contain_word_files
+!payload_holders/eas_encrypted_shellcode.doc
 .jython_cache/
 templates/loader.hta
 venv/*
