--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ payloads/*
 payload_holders/*
 !payload_holders/this_folder_should_contain_word_files
 !payload_holders/eas_encrypted_shellcode.doc
+!payload_holders/stage-12.cs
 .jython_cache/
 templates/loader.hta
 venv/*
